--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ edition = "2021"
 name = "aoc22-day1"
 path = "src/day1.rs"
 
+[[bin]]
+name = "aoc22-day2"
+path = "src/day2.rs"
+
+
 [dependencies]
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
