--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ path = "src/day2.rs"
 name = "aoc22-day3"
 path = "src/day3.rs"
 
+[[bin]]
+name = "aoc22-day6"
+path = "src/day6.rs"
+
 [dependencies]
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
