--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,16 @@ path = "src/day3.rs"
 name = "aoc22-day6"
 path = "src/day6.rs"
 
+[[bin]]
+name = "aoc22-day7"
+path = "src/day7.rs"
+
 [dependencies]
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
 itertools = "~0.10.3"
 console-bitmap = { git = "https://github.com/anall/console-bitmap-rs" }
 pathfinding = "2.2.2"
+lazy_static = "~1.4.0"
 
-#lazy_static = "~1.4.0"
 #intspan = "~0.4.14"
