--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,10 @@ path = "src/day6.rs"
 name = "aoc22-day7"
 path = "src/day7.rs"
 
+[[bin]]
+name = "aoc22-day8"
+path = "src/day8.rs"
+
 [dependencies]
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
