--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ path = "src/day7.rs"
 name = "aoc22-day8"
 path = "src/day8.rs"
 
+[[bin]]
+name = "aoc22-day10"
+path = "src/day10.rs"
+
 [dependencies]
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
