--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ name = "aoc22-day8"
 path = "src/day8.rs"
 
 [[bin]]
+name = "aoc22-day9"
+path = "src/day9.rs"
+
+[[bin]]
 name = "aoc22-day10"
 path = "src/day10.rs"
 
