--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,13 @@ path = "src/day9.rs"
 name = "aoc22-day10"
 path = "src/day10.rs"
 
+[[bin]]
+name = "aoc22-day13"
+path = "src/day13.rs"
+
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 adventlib = { path="../adventlib" }
 regex = "~1.4.2"
 itertools = "~0.10.3"
