--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,10 @@ path = "src/day12.rs"
 name = "aoc22-day13"
 path = "src/day13.rs"
 
+[[bin]]
+name = "aoc22-day14"
+path = "src/day14.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
