--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,10 @@ path = "src/day14.rs"
 name = "aoc22-day15"
 path = "src/day15.rs"
 
+[[bin]]
+name = "aoc22-day17"
+path = "src/day17.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -73,7 +77,7 @@ adventlib = { path="../adventlib" }
 regex = "~1.4.2"
 itertools = "~0.10.3"
 console-bitmap = { git = "https://github.com/anall/console-bitmap-rs" }
-pathfinding = "2.2.2"
+pathfinding = "4.1"
 lazy_static = "~1.4.0"
 #intspan = "~0.4.14"
 rayon = "1.6"
