--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,10 @@ path = "src/day15.rs"
 name = "aoc22-day17"
 path = "src/day17.rs"
 
+[[bin]]
+name = "aoc22-day25"
+path = "src/day25.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
